# sla-sched-prototype

./: .gitignore  CMakeLists.txt  anal.ipynb  consts.h  data_process_fg.cc  dispatcher.cc  dispatcher.h  dynamic_page_get.cc  gen_graph.py  lb.cc  lb.h  machine.h  make-cgroups.sh  message.h  poll_cpu_util.cc  proc.h  proc_hist.h  proc_type.h  queue.h  remove-cgroups.sh  run-and-record.sh  set-cores.sh  setup-cgroups.sh  static_page_get.cc  test.cc  time-command.sh  website.cc
dispatcher/: CMakeLists.txt  dispatcher.cc  dispatcher.h  dummy.proto  dummy_srv.h  main.proto  main_srv.h  proc.h  queue.h  stateful_dummy_srv.h  website_ex_srv.h
echo-server-ex/: echo-server.cc  echo-server.proto  run-website-load.cc
lb/: CMakeLists.txt  dummy_clnt.h  lb.cc  lb.h  machine.h  main_clnt.h  stateful_dummy_clnt.h  website_ex_clnt.h
util/: CMakeLists.txt  consts.h  proc.h  proc_type.h  queue.h  utils.h
website-ex/: data_process_fg.cc  dynamic_page_get.cc  website-client.cc  website-client.h
